Bug 150578 - Table tools section disappear after delete one or more rows from the table
Summary: Table tools section disappear after delete one or more rows from the table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords: filter:odt
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-08-24 07:33 UTC by NISZ LibreOffice Team
Modified: 2022-12-19 09:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample for testing (16.50 KB, application/vnd.oasis.opendocument.text)
2022-08-24 07:34 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-08-24 07:33:48 UTC
Description:
When I delete a row from the table the table tools section disappear. And I have to click in the table to show it up again.
But only when the "Show" in the "Track Changes" is not turned on. If it is then the table tools section stays seen.

Steps to Reproduce:
1. Open the attached file.
2. Select a row from the table then click the "Delete selected row" button.

Actual Results:
When I delete the selected row then the table tools section disappear.


Expected Results:
The table tools section stays seen.


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: e93b7f6a5c5f9ee86546d95d7fe70ecc26b71b91
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-08-24 07:34:17 UTC
Created attachment 181997 [details]
sample for testing
Comment 2 Commit Notification 2022-12-09 15:12:59 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e5986baa983e1c7b5e07c45299fd84be2c230fbe

tdf#150578 sw track changes: fix table toolbar at row deletion

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-12-12 09:11:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/d0441be82ab9ea2b7aa366b1fe3e1a523b24b076

tdf#150578 sw track changes: fix table toolbar at row deletion

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-12-19 09:57:34 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad387d5b984c6666906505d25685065f710ed55d
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded