tdf#150578 sw track changes: fix table toolbar at row deletion

In Hide Changes mode with enabled change tracking, table row
deletion disabled the table toolbar, so it wasn't possible
to repeat the click on the toolbar deleting multiple rows
row by row.

Follow-up to commit 16c705ec0d1ab4b4428577ccb0ea3fc14ee0fc88
"tdf#148849 sw: fix cursor pos at tracked DeleteRow in Hide Changes".

Change-Id: I297bae405cb24f7090144344947c01a1dadf9261
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143876
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit e5986baa983e1c7b5e07c45299fd84be2c230fbe)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143866
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>